<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_onscene">About OnScene</string>
    <string name="access_location_services">access location services</string>
    <string name="active">Active</string>
    <string name="active_date">Active Date</string>
    <string name="active_date_newest_first">Active Date (Newest First)</string>
    <string name="active_date_oldest_first">Active Date (Oldest First)</string>
    <string name="active_event">Active Event</string>
    <string name="add_additional_cfs">Add Additional CFS</string>
    <string name="add_event_label">Add Event Label</string>
    <string name="add_image_s">Add Image(s)</string>
    <string name="add_location">Add Location</string>
    <string name="add_location_notes">Add Location Notes</string>
    <string name="add_person">Add Person</string>
    <string name="add_to_collection">Add To Collection</string>
    <string name="additional_cfs">Additional CFS:</string>
    <string name="additional_units">+%1$d</string>
    <string name="address_number">Address #</string>
    <string name="advanced_configuration_allowed">Advanced Configuration Allowed</string>
    <string name="age_label">Age</string>
    <string name="all">All</string>
    <string name="all_count">All (%1$s)</string>
    <string name="all_rights_reserved">All Rights Reserved.</string>
    <string name="all_time">All Time</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_launcher_name">OnScene</string>
    <string name="app_name">Mark43 OnScene</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="apt_unit">Apt, Unit</string>
    <string name="arcgisruntime_client_cert_dialog_button_positive">Continue</string>
    <string name="arcgisruntime_client_cert_dialog_message">The service requested a certificate to authenticate, but did not receive one. Either your device has no certificates or you did not find an applicable certificate in the displayed list. Tap Continue to go to the Settings app, where you can install a certificate to access this service.</string>
    <string name="arcgisruntime_client_cert_dialog_title">Client Certificate Requested</string>
    <string name="arcgisruntime_created_by">Created by %1$s</string>
    <string name="arcgisruntime_created_by_day">Created by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_created_by_full">Created by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_created_by_hour">Created by %1$s an hour ago</string>
    <string name="arcgisruntime_created_by_hours">Created by %1$s %2$d hours ago</string>
    <string name="arcgisruntime_created_by_minute">Created by %1$s a minute ago</string>
    <string name="arcgisruntime_created_by_minutes">Created by %1$s %2$d minutes ago</string>
    <string name="arcgisruntime_created_by_seconds">Created by %1$s seconds ago</string>
    <string name="arcgisruntime_created_day">Created on %1$s at %2$s</string>
    <string name="arcgisruntime_created_full">Created on %1$s at %2$s</string>
    <string name="arcgisruntime_created_hour">Created an hour ago</string>
    <string name="arcgisruntime_created_hours">Created %1$d hours ago</string>
    <string name="arcgisruntime_created_minute">Created a minute ago</string>
    <string name="arcgisruntime_created_minutes">Created %1$d minutes ago</string>
    <string name="arcgisruntime_created_seconds">Created seconds ago</string>
    <string name="arcgisruntime_edited_by">Edited by %1$s</string>
    <string name="arcgisruntime_edited_by_day">Edited by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_edited_by_full">Edited by %1$s on %2$s at %3$s</string>
    <string name="arcgisruntime_edited_by_hour">Edited by %1$s an hour ago</string>
    <string name="arcgisruntime_edited_by_hours">Edited by %1$s %2$d hours ago</string>
    <string name="arcgisruntime_edited_by_minute">Edited by %1$s a minute ago</string>
    <string name="arcgisruntime_edited_by_minutes">Edited by %1$s %2$d minutes ago</string>
    <string name="arcgisruntime_edited_by_seconds">Edited by %1$s seconds ago</string>
    <string name="arcgisruntime_edited_day">Edited on %1$s at %2$s</string>
    <string name="arcgisruntime_edited_full">Edited on %1$s at %2$s</string>
    <string name="arcgisruntime_edited_hour">Edited an hour ago</string>
    <string name="arcgisruntime_edited_hours">Edited %1$d hours ago</string>
    <string name="arcgisruntime_edited_minute">Edited a minute ago</string>
    <string name="arcgisruntime_edited_minutes">Edited %1$d minutes ago</string>
    <string name="arcgisruntime_edited_seconds">Edited seconds ago</string>
    <string name="arcgisruntime_error_coded_value_domain_value_not_found">Value is not one of the coded value domain values</string>
    <string name="arcgisruntime_error_field_must_be_numeric">Numeric field must have numeric value</string>
    <string name="arcgisruntime_error_invalid_geoelement">Invalid GeoElement</string>
    <string name="arcgisruntime_error_max_field_length">Value exceeds maximum field length of %1$d</string>
    <string name="arcgisruntime_error_null_value_not_allowed">Null value is not allowed for field named `%1$s`</string>
    <string name="arcgisruntime_error_out_of_range">Value is outside the valid range %1$s to %2$s</string>
    <string name="arcgisruntime_http_auth_request_dialog_button_negative">Cancel</string>
    <string name="arcgisruntime_http_auth_request_dialog_button_positive">Log in</string>
    <string name="arcgisruntime_http_auth_request_dialog_invalid_credential">Invalid username or password.</string>
    <string name="arcgisruntime_http_auth_request_dialog_password_hint">Password</string>
    <string name="arcgisruntime_http_auth_request_dialog_title">Authentication Required</string>
    <string name="arcgisruntime_http_auth_request_dialog_username_hint">Username</string>
    <string name="arcgisruntime_mapview_logo_string">Powered by <a color="#828282" href="http://www.esri.com/">Esri</a></string>
    <string name="arcgisruntime_na_CurrentLanguage">en</string>
    <string name="arcgisruntime_range_domain_string">%1$s to %2$s</string>
    <string name="arcgisruntime_self_signed_dialog_button_negative">Block</string>
    <string name="arcgisruntime_self_signed_dialog_button_positive">Trust</string>
    <string name="arcgisruntime_self_signed_dialog_mismatched_host">This server could not prove itself; its security certificate is from another domain. This may caused by a misconfiguration or an attacker intercepting your connection. Would you like to continue anyway?</string>
    <string name="arcgisruntime_self_signed_dialog_mismatched_title">Mismatched Hostname</string>
    <string name="arcgisruntime_self_signed_dialog_remember">Remember?</string>
    <string name="arcgisruntime_self_signed_dialog_untrusted_host">This server could not prove itself; its security certificate is not trusted by your OS. Would you like to continue anyway?</string>
    <string name="arcgisruntime_self_signed_dialog_untrusted_title">Untrusted Host</string>
    <string name="arcgisruntime_sketcheditor_callout_clear">Clear</string>
    <string name="arcgisruntime_sketcheditor_callout_remove_vertex">Remove Vertex</string>
    <string name="archive">Archive</string>
    <string name="archive_collection">Archive Collection</string>
    <string name="archive_collection_confirmation">This collection will be moved to your archive. It can be restored at any time.</string>
    <string name="area">Area</string>
    <string name="article">Article</string>
    <string name="ascending">Ascending</string>
    <string name="ascending_date">Oldest First</string>
    <string name="ascending_numbers">1–9 ↓</string>
    <string name="ascending_text">A–Z ↓</string>
    <string name="assign_and_hold">Assign and Hold</string>
    <string name="assign_only">Assign Only</string>
    <string name="change_status_to">Change status to:</string>
    <string name="contact">Contact</string>
    <string name="copy_list">Copy List</string>
    <string name="delete">Delete</string>
    <string name="department_title">Department Title</string>
    <string name="domain">Domain</string>
    <string name="done">Done</string>
    <string name="edit_title">Edit Title</string>
    <string name="filter">Filter</string>
    <string name="host">Host</string>
    <string name="identification">Identification</string>
    <string name="label">Label</string>
    <string name="logout">Logout</string>
    <string name="mb_close">Close</string>
    <string name="mb_flashlight">Flashlight</string>
    <string name="mb_help">Help</string>
    <string name="mdm_advanced_configuration_description">Allow users to use standard tenant selector.</string>
    <string name="mdm_department_title_description">The department name to show on the environment selection screen.</string>
    <string name="mdm_domain_description">The value from the domain drop-down on the login screen.</string>
    <string name="mdm_domain_label_description">The name to display for this environment in the drop-down</string>
    <string name="mdm_host_description">The value from the host name on the login screen.</string>
    <string name="missing_abilities_description">"We've detected that your account is missing the core abilities listed below. Copy the list and contact your admin for support."</string>
    <string name="missing_abilities_title">You are missing core user abilities</string>
    <string name="no_appearance_info">No appearance info</string>
    <string name="no_contact_info">No contact info</string>
    <string name="no_identification_info">No identification info</string>
    <string name="photo">Photo</string>
    <string name="retry">Retry</string>
    <string name="scroll_to_top">Scroll To Top</string>
    <string name="tenant_configuration">Tenant Configuration</string>
    <string name="tenants">Tenants</string>
    <string name="unarchive">Unarchive</string>
    <string name="undo_changes">Undo Changes</string>
</resources>