<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:orientation="vertical" android:paddingTop="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioButton android:textColor="@color/textColor" android:id="@id/assign_self_choice_assign_only" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/assign_only" />
    <RadioButton android:textColor="@color/textColor" android:id="@id/assign_self_choice_assign_and_hold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/assign_and_hold" />
    <TextView android:textColor="@color/textColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" android:text="@string/change_status_to" />
</RadioGroup>