<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/galaxy" android:paddingTop="48.0dip" android:paddingBottom="@dimen/default_spacing" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/default_spacing" android:paddingEnd="@dimen/default_spacing"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/logo" android:layout_width="32.0dip" android:layout_height="32.0dip" android:src="@drawable/ic_mark43_logo" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/shieldColor" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Button" android:textStyle="bold" android:textColor="@color/gold" android:id="@id/logoutText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/logout" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="@id/logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/logo" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:textColor="@color/white" android:id="@id/headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/missing_abilities_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/logo" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/missing_abilities_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/headline" />
    <androidx.compose.ui.platform.ComposeView android:id="@id/composeView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="32.0dip" android:layout_marginBottom="@dimen/default_spacing" app:layout_constraintBottom_toTopOf="@id/retryButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/black" android:id="@id/copyListButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/copy_list" android:layout_marginStart="@dimen/half_spacing" app:backgroundTint="@color/brandAccent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/retryButton" app:layout_constraintRight_toRightOf="parent" />
    <com.google.android.material.button.MaterialButton android:textColor="@color/white" android:id="@id/retryButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/retry" android:layout_marginEnd="@dimen/half_spacing" app:backgroundTint="@color/galaxy" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/copyListButton" app:strokeColor="@color/brandAccent" app:strokeWidth="2.0dip" />
</androidx.constraintlayout.widget.ConstraintLayout>