<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/auth_title" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/arcgisruntime_self_signed_dialog_untrusted_title" />
    <TextView android:gravity="center_horizontal" android:id="@id/auth_hostname" android:paddingTop="5.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <View android:id="@id/auth_separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:gravity="start" android:id="@id/auth_message" android:paddingTop="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/arcgisruntime_self_signed_dialog_untrusted_host" />
    <CheckedTextView android:gravity="end|center" android:id="@id/auth_remember" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="5.0dip" android:checked="true" android:checkMark="?android:listChoiceIndicatorMultiple" android:text="@string/arcgisruntime_self_signed_dialog_remember" android:layout_marginEnd="10.0dip" />
</LinearLayout>