<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.progressindicator.CircularProgressIndicator android:id="@id/loading_indicator" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" app:indicatorColor="@color/colorPrimary" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ScrollView android:id="@id/person_scroller" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/default_spacing" app:layout_constraintBottom_toTopOf="@id/add_to_collection_button" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:layout_gravity="center_horizontal" android:id="@id/image_layout" android:layout_width="48.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
                <ImageView android:id="@id/mugshot_image" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/collection_person_placeholder" android:contentDescription="@string/photo" />
            </FrameLayout>
            <com.google.android.flexbox.FlexboxLayout android:layout_gravity="center" android:id="@id/labels" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:foregroundGravity="center" android:layout_marginStart="64.0dip" android:layout_marginEnd="64.0dip" app:flexDirection="row" app:flexWrap="wrap" app:justifyContent="center" />
            <TextView android:textStyle="bold" android:background="@color/surface3" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/identification" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image_layout" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/identification_recycler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/half_spacing" android:overScrollMode="never" android:layout_marginStart="@dimen/default_spacing" android:layout_marginEnd="@dimen/default_spacing" android:nestedScrollingEnabled="false" />
            <TextView android:textColor="@color/textSecondary" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/no_identification_info" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="32.0dip" android:text="@string/no_identification_info" />
            <TextView android:textStyle="bold" android:background="@color/surface3" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/contact" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image_layout" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/contact_recycler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/half_spacing" android:overScrollMode="never" android:layout_marginStart="@dimen/default_spacing" android:layout_marginEnd="@dimen/default_spacing" android:nestedScrollingEnabled="false" />
            <TextView android:textColor="@color/textSecondary" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/no_contact_info" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="32.0dip" android:text="@string/no_contact_info" />
            <TextView android:textStyle="bold" android:background="@color/surface3" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/appearance" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image_layout" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/appearance_recycler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/half_spacing" android:overScrollMode="never" android:layout_marginStart="@dimen/default_spacing" android:layout_marginEnd="@dimen/default_spacing" android:nestedScrollingEnabled="false" />
            <TextView android:textColor="@color/textSecondary" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/no_appearance_info" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="32.0dip" android:text="@string/no_appearance_info" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton android:textColor="@color/primary_button_text_color" android:id="@id/add_to_collection_button" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/default_spacing" android:text="@string/add_to_collection" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.MaterialComponents.Button" />
</androidx.constraintlayout.widget.ConstraintLayout>